# melinda

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  conanfile.txt  iwyu.imp  travis.sh
source/: .clang-format  .gitignore  CMakeLists.txt  debug.sh  main.cpp  release.sh  test.sh
source/client/: CMakeLists.txt
source/client/example/: CMakeLists.txt
source/client/example/src/: main.cpp
source/client/mppci/: CMakeLists.txt
source/client/mppci/include/: mppci.h
source/client/mppci/src/: mppci.cpp
source/client/mppci/test/: mppci.cpp
source/client/src/: main.cpp
source/cmake/: clang-format.cmake  clang-tidy.cmake  global-tools.cmake
source/commmon/include/: iterator_traits.h
source/common/: CMakeLists.txt
source/common/cppex/: CMakeLists.txt
source/common/cppex/include/: always_false.h  iterator_traits.h  result.h  scope_exit.h  unused.h
source/common/cppex/src/: always_false.cpp  iterator_traits.cpp  result.cpp  scope_exit.cpp  unused.cpp
source/common/cppex/test/: always_false.t.cpp  iterator_traits.t.cpp  result.t.cpp  scope_exit.t.cpp  unused.t.cpp
source/common/include/: filesystem.h
source/common/src/: filesystem.cpp  iterator_traits.cpp
source/common/test/: iterator_traits.t.cpp
source/common/trace/: CMakeLists.txt
source/common/trace/include/: trace.h
source/common/trace/src/: trace.cpp
source/common/trace/test/: trace.t.cpp
source/mbl/: CMakeLists.txt
source/mbl/mblcxx/: CMakeLists.txt
source/mbl/mblcxx/include/: mblcxx_always_false.h  mblcxx_iterator_traits.h  mblcxx_result.h  mblcxx_scope_exit.h  mblcxx_sops.h  mblcxx_unused.h
source/mbl/mblcxx/src/: mblcxx_always_false.cpp  mblcxx_iterator_traits.cpp  mblcxx_result.cpp  mblcxx_scope_exit.cpp  mblcxx_sops.cpp  mblcxx_unused.cpp
source/mbl/mblcxx/test/: mblcxx_always_false.t.cpp  mblcxx_iterator_traits.t.cpp  mblcxx_result.t.cpp  mblcxx_scope_exit.t.cpp  mblcxx_sops.t.cpp  mblcxx_unused.t.cpp
source/mbl/mbltrc/: CMakeLists.txt
source/mbl/mbltrc/include/: mbltrc_memory_mapped_sink.h  mbltrc_sink.h  mbltrc_sink_manager.h  mbltrc_timestamp.h  mbltrc_trace.h  mbltrc_trace_handle.h  mbltrc_trace_level.h  mbltrc_trace_options.h
source/mbl/mbltrc/src/: mbltrc_memory_mapped_sink.cpp  mbltrc_sink.cpp  mbltrc_timestamp.cpp  mbltrc_trace.cpp  mbltrc_trace_handle.cpp  mbltrc_trace_level.cpp  mbltrc_trace_options.cpp
source/mbl/mbltrc/test/: mbltrc_memory_mapped_sink.t.cpp  mbltrc_timestamp.t.cpp  mbltrc_trace.t.cpp  mbltrc_trace_level.t.cpp
source/mcl/: CMakeLists.txt
source/mcl/mclxmp/: CMakeLists.txt
source/mcl/mclxmp/src/: mclxmp.m.cpp
source/mdb/: CMakeLists.txt
source/mdb/mdbclt/: CMakeLists.txt
source/mdb/mdbclt/mdbclt_example/: CMakeLists.txt
source/mdb/mdbnet/: .gitignore  CMakeLists.txt  mdbnet_wire.fbs
source/mdb/mdbnet/include/: mdbnet_client.h  mdbnet_serialization.h  mdbnet_server.h  mdbnet_types.h  mdbnet_wire_generated.h
source/mdb/mdbnet/src/: mdbnet_client.cpp  mdbnet_internal.cpp  mdbnet_internal.h  mdbnet_serialization.cpp  mdbnet_server.cpp  mdbnet_types.cpp  mdbnet_wire_generated.cpp
source/mdb/mdbnet/test/: mdbnet_client.t.cpp  mdbnet_serialization.t.cpp  mdbnet_server.t.cpp  mdbnet_types.t.cpp  mdbnet_wire_generated.t.cpp
source/mdb/mdbsql/: CMakeLists.txt
source/mdb/mdbsql/include/: mdbsql_ast.h  mdbsql_engine.h  mdbsql_grammar.h  mdbsql_parser.h  mdbsql_statement.h
source/mdb/mdbsql/src/: mdbsql_ast.cpp  mdbsql_engine.cpp  mdbsql_grammar.cpp  mdbsql_parser.cpp
source/mdb/mdbsql/test/: mdbsql.t.cpp  mdbsql.t.h  mdbsql_ast.t.cpp  mdbsql_engine.t.cpp  mdbsql_grammar.t.cpp  mdbsql_parser.t.cpp  mdbsql_statement.t.cpp
source/mdb/mdbsrv/: CMakeLists.txt
source/mdb/mdbsrv/include/: mdbsrv_options.h
source/mdb/mdbsrv/src/: mdbsrv.m.cpp  mdbsrv_options.cpp
source/mql/: CMakeLists.txt
source/mql/mqlast/: CMakeLists.txt
source/mql/mqlast/include/: mqlast_binary_string_literal.h  mqlast_character_string_literal.h  mqlast_common.h  mqlast_datetime_literal.h  mqlast_delimited_identifier.h  mqlast_identifier.h  mqlast_national_character_string_literal.h  mqlast_numeric_literal.h  mqlast_regular_identifier.h  mqlast_unicode_character_string_literal.h  mqlast_unicode_delimited_identifier.h
source/mql/mqlast/src/: mqlast_binary_string_literal.cpp  mqlast_character_string_literal.cpp  mqlast_common.cpp  mqlast_datetime_literal.cpp  mqlast_delimited_identifier.cpp  mqlast_identifier.cpp  mqlast_national_character_string_literal.cpp  mqlast_numeric_literal.cpp  mqlast_regular_identifier.cpp  mqlast_unicode_character_string_literal.cpp  mqlast_unicode_delimited_identifier.cpp
source/mql/mqlprs/: CMakeLists.txt
source/mql/mqlprs/include/: mqlprs_binary_string_literal.h  mqlprs_character_string_literal.h  mqlprs_common.h  mqlprs_datetime_literal.h  mqlprs_delimited_identifier.h  mqlprs_identifier.h  mqlprs_national_character_string_literal.h  mqlprs_numeric_literal.h  mqlprs_parse_error.h  mqlprs_parser.h  mqlprs_regular_identifier.h  mqlprs_reserved_word.h  mqlprs_unicode_character_string_literal.h  mqlprs_unicode_delimited_identifier.h
source/mql/mqlprs/src/: mqlprs_binary_string_literal.cpp  mqlprs_character_string_literal.cpp  mqlprs_common.cpp  mqlprs_datetime_literal.cpp  mqlprs_delimited_identifier.cpp  mqlprs_identifier.cpp  mqlprs_national_character_string_literal.cpp  mqlprs_numeric_literal.cpp  mqlprs_parse_error.cpp  mqlprs_parser.cpp  mqlprs_regular_identifier.cpp  mqlprs_reserved_word.cpp  mqlprs_unicode_character_string_literal.cpp  mqlprs_unicode_delimited_identifier.cpp
source/network/: CMakeLists.txt  wire.fbs
source/network/ncprot/: CMakeLists.txt  wire.fbs
source/server/: CMakeLists.txt
source/server/src/: main.cpp
source/src/: main.cpp
src/mbl/mblcxx/: CMakeLists.txt
src/mbl/mblcxx/include/: mblcxx_result.hpp  (+2 more)
src/mdb/mdbxtr/: CMakeLists.txt
src/melinda/: CMakeLists.txt
src/melinda/src/: melinda.m.cpp
src/melinda/test/: melinda.t.cpp
src/mql/mqlast/: CMakeLists.txt
src/mql/mqlprs/: CMakeLists.txt
(+144 files in other folders)
